窓で共通のM使ってみた

--- a/4-POSAccuracyEvalu.ipynb
+++ b/4-POSAccuracyEvalu.ipynb
@@ -1720,104 +1720,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27792b58",
+   "cell_type": "markdown",
+   "id": "eb9c5240",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "methodCombinations = [\n",
-    "    ['cuda', cupy_POS, \"cupy_POS\"]\n",
-    "]\n",
-    "\n",
-    "for i in range(len(movie_paths)):\n",
-    "    print(f'Processing movie: {movie_paths[i]}')\n",
-    "    inputMoviePath = movie_paths[i]\n",
-    "    rootDir = data_dirs[i]\n",
-    "    dataName = movie_names[i]\n",
-    "\n",
-    "    cap = cv2.VideoCapture(inputMoviePath)\n",
-    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
-    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
-    "\n",
-    "    POS_internalArray_path = os.path.join(rootDir, SAVE_DIR, f'POS_internalArray_output_{dataName}.csv')\n",
-    "    POS_internalArray_df = pd.read_csv(POS_internalArray_path)\n",
-    "    \n",
-    "    # 図の保存先ディレクトリ\n",
-    "    figure_dir = os.path.join(rootDir, SAVE_DIR, 'figures')\n",
-    "    os.makedirs(figure_dir, exist_ok=True)\n",
-    "    \n",
-    "    print(f'\\n読み込んだデータ件数: {len(POS_internalArray_df)}')\n",
-    "    \n",
-    "    # 各ウィンドウに対してプロット\n",
-    "    for idx, row in POS_internalArray_df.iterrows():\n",
-    "        window_index = row['window_index']\n",
-    "        window_size = row['window_size']\n",
-    "        stride = row['stride']\n",
-    "        frame_start = row['frame_start']\n",
-    "        frame_end = row['frame_end']\n",
-    "        window_start_time = row['window_start_time']\n",
-    "        window_end_time = row['window_end_time']\n",
-    "        ecg_bpm = row['ecg_bpm']\n",
-    "        rppg_bpm = row['rppg_bpm']\n",
-    "        bpm_MAE = row['bpm_MAE']\n",
-    "        M_list_str = row['M_list']\n",
-    "        num_sliding_windows = row['num_sliding_windows']\n",
-    "        \n",
-    "        print(f\"\\nウィンドウ {window_index}: 窓サイズ {window_size}s, ストライド {stride}s\")\n",
-    "        print(f\"  時間範囲: {window_start_time:.2f}s - {window_end_time:.2f}s\")\n",
-    "        print(f\"  スライディングウィンドウ数: {num_sliding_windows}\")\n",
-    "        print(f\"  ECG BPM: {ecg_bpm:.2f}, rPPG BPM: {rppg_bpm:.2f}, MAE: {bpm_MAE:.2f}\")\n",
-    "        \n",
-    "        # M_listを解析\n",
-    "        # フォーマット: \"r1 g1 b1; r2 g2 b2; ...\" (セミコロン区切りで各時刻、スペース区切りでRGB)\n",
-    "        M_times = M_list_str.split('; ')\n",
-    "        \n",
-    "        R_list = []\n",
-    "        G_list = []\n",
-    "        B_list = []\n",
-    "        \n",
-    "        for M_time in M_times:\n",
-    "            values = M_time.strip().split()\n",
-    "            if len(values) == 3:\n",
-    "                R_list.append(float(values[0]))\n",
-    "                G_list.append(float(values[1]))\n",
-    "                B_list.append(float(values[2]))\n",
-    "        \n",
-    "        # 時系列プロット\n",
-    "        fig, axes = plt.subplots(3, 1, figsize=(15, 10), sharex=True)\n",
-    "        \n",
-    "        time_axis = np.arange(len(R_list))\n",
-    "        \n",
-    "        # Rチャンネル\n",
-    "        axes[0].plot(time_axis, R_list, color='red', linewidth=1.5, label='R channel')\n",
-    "        axes[0].set_ylabel('M (R)', fontsize=11)\n",
-    "        axes[0].set_title(f'Window {window_index} - M変化 (R, G, B)\\nMAE: {bpm_MAE:.2f}, 窓サイズ: {window_size}s, 窓時間: {window_start_time:.2f}-{window_end_time:.2f}s', fontsize=13)\n",
-    "        axes[0].legend()\n",
-    "        \n",
-    "        # Gチャンネル\n",
-    "        axes[1].plot(time_axis, G_list, color='green', linewidth=1.5, label='G channel')\n",
-    "        axes[1].set_ylabel('M (G)', fontsize=11)\n",
-    "        axes[1].grid(True, alpha=0.3)\n",
-    "        axes[1].legend()\n",
-    "        \n",
-    "        # Bチャンネル\n",
-    "        axes[2].plot(time_axis, B_list, color='blue', linewidth=1.5, label='B channel')\n",
-    "        axes[2].set_ylabel('M (B)', fontsize=11)\n",
-    "        axes[2].set_xlabel('スライディングウィンドウインデックス', fontsize=11)\n",
-    "        axes[2].grid(True, alpha=0.3)\n",
-    "        axes[2].legend()\n",
-    "        \n",
-    "        plt.tight_layout()\n",
-    "        \n",
-    "        # 保存\n",
-    "        output_path = os.path.join(figure_dir, f'M_list_RGB_window_{window_index}_{dataName}.png')\n",
-    "        plt.savefig(output_path, dpi=300, bbox_inches='tight')\n",
-    "        print(f\"  プロットを保存: {output_path}\")\n",
-    "        plt.close()\n",
-    "        \n",
-    "    cap.release()\n",
-    "    print(f'\\n{dataName}の処理が完了しました。')"
+    "動画を通したMの変動をプロット"
    ]
   },
   {
@@ -2008,6 +1915,231 @@
     "    \n",
     "    cap.release()\n",
     "    print(f'\\n{dataName}の処理が完了しました。')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fb829be",
+   "metadata": {},
+   "source": [
+    "- 検証：窓で共通のM使うと精度はどうなる？\n",
+    "- 結果：ほぼ精度変わらず\n",
+    "- 前半のMで後半やってみる\n",
+    "- ノイズが乗ってないフレームのみを参考にしてM作って窓全体に適用してみる"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43d0231f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "methodCombinations = [\n",
+    "    ['cuda', cupy_POS, \"cupy_POS\"]\n",
+    "]\n",
+    "\n",
+    "for i in range(len(movie_paths)):\n",
+    "    print(f'Processing movie: {movie_paths[i]}')\n",
+    "    inputMoviePath = movie_paths[i]\n",
+    "    rootDir = data_dirs[i]\n",
+    "    dataName = movie_names[i]\n",
+    "\n",
+    "    cap = cv2.VideoCapture(inputMoviePath)\n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "\n",
+    "    window_analysis_path = os.path.join(rootDir, RPPG_ACCURACY_EVAL_DIR, f'window_analysis_{dataName}.csv')\n",
+    "    window_analysis_df = pd.read_csv(window_analysis_path)\n",
+    "\n",
+    "    # 手法がcupy_POSのデータを抽出\n",
+    "    high_mae_df = window_analysis_df[window_analysis_df['bvp_method'] == 'cupy_POS'].copy()\n",
+    "    print(f'\\n高MAEデータ - {dataName}, 件数: {len(high_mae_df)}')\n",
+    "\n",
+    "    # 結果保存用のリスト\n",
+    "    results_list = []\n",
+    "    \n",
+    "    window_index = 0\n",
+    "    # high_mae_dfの各行を処理\n",
+    "    for idx, row in high_mae_df.iterrows():\n",
+    "        window_index = row['window_index']\n",
+    "        window_size = row['window_size']\n",
+    "        stride = row['stride']\n",
+    "        frame_start = row['frame_start']\n",
+    "        frame_end = row['frame_end']\n",
+    "        window_start_time = row['window_start_time']\n",
+    "        window_end_time = row['window_end_time']\n",
+    "        ecg_bpm_in_window_mean = row['ecg_bpm_mean']\n",
+    "        bpm_MAE = row['bpm_MAE']\n",
+    "\n",
+    "        print(f\"\\nウィンドウ {window_index}: 窓サイズ {window_size}s, ストライド {stride}s, フレーム {frame_start}-{frame_end}, 時間 {window_start_time:.2f}-{window_end_time:.2f}s\")\n",
+    "\n",
+    "        # RGB信号を抽出\n",
+    "        r_signal_in_window = np.fromstring(row['r_signal_in_window'][1:-1], sep=' ')\n",
+    "        g_signal_in_window = np.fromstring(row['g_signal_in_window'][1:-1], sep=' ')\n",
+    "        b_signal_in_window = np.fromstring(row['b_signal_in_window'][1:-1], sep=' ')\n",
+    "\n",
+    "        print(f'  R信号長: {len(r_signal_in_window)}, G信号長: {len(g_signal_in_window)}, B信号長: {len(b_signal_in_window)}')\n",
+    "\n",
+    "        # rgbからBVPを計算\n",
+    "        rgb_signal = np.array([[r_signal_in_window, g_signal_in_window, b_signal_in_window]], dtype=np.float32)\n",
+    "        print(f\"\\nRGB信号の形状: {rgb_signal.shape}\")\n",
+    "\n",
+    "        signal_length = rgb_signal.shape[2]\n",
+    "        min_required_length = 50\n",
+    "            \n",
+    "        filtered_signal = [rgb_signal]\n",
+    "        \n",
+    "        # ============================================================================\n",
+    "        # 【重要】POS法でMの平均を使用する実装\n",
+    "        # ============================================================================\n",
+    "        import cupy as cp\n",
+    "\n",
+    "        # CuPy配列に変換\n",
+    "        rgb_cupy = cp.asarray(rgb_signal)\n",
+    "\n",
+    "        # POS法のパラメータ\n",
+    "        eps = 10**-9\n",
+    "        X = rgb_cupy\n",
+    "        fps_cupy = cp.float32(fps)\n",
+    "        e, c, f = X.shape  # e = #estimators, c = 3 rgb ch., f = #frames\n",
+    "        w = int(1.6 * fps_cupy)  # window length\n",
+    "\n",
+    "        # 投影行列P\n",
+    "        P = cp.array([[0, 1, -1], [-2, 1, 1]], dtype=cp.float32)\n",
+    "        Q = cp.stack([P for _ in range(e)], axis=0)\n",
+    "\n",
+    "        # ============================================================================\n",
+    "        # ステップ1: 各スライディングウィンドウのMを計算して平均\n",
+    "        # ============================================================================\n",
+    "        M_list = []\n",
+    "        \n",
+    "        print(f\"  ステップ1: 各スライディングウィンドウのMを計算中...\")\n",
+    "        for n in cp.arange(w, f):\n",
+    "            m = n - w + 1\n",
+    "            \n",
+    "            # 時間的正規化のためのM(各ウィンドウの平均の逆数)\n",
+    "            Cn = X[:, :, m:(n + 1)]\n",
+    "            M = 1.0 / (cp.mean(Cn, axis=2) + eps)\n",
+    "            M_list.append(cp.asnumpy(M))\n",
+    "        \n",
+    "        # 全スライディングウィンドウのMの平均を計算\n",
+    "        average_M = cp.mean(cp.array(M_list), axis=0)\n",
+    "        print(f\"  平均M: {cp.asnumpy(average_M)}\")\n",
+    "        print(f\"  M_listの長さ: {len(M_list)}\")\n",
+    "        \n",
+    "        # ============================================================================\n",
+    "        # ステップ2: 平均Mを使ってPOS法を実行\n",
+    "        # ============================================================================\n",
+    "        print(f\"  ステップ2: 平均Mを使用してPOS法を実行中...\")\n",
+    "        \n",
+    "        # 初期化\n",
+    "        H = cp.zeros((e, f))\n",
+    "        M_expanded = cp.expand_dims(average_M, axis=2)  # 形状: (e, c, 1)\n",
+    "        \n",
+    "        # スライディングウィンドウループ(平均Mを使用)\n",
+    "        for n in cp.arange(w, f):\n",
+    "            m = n - w + 1\n",
+    "            \n",
+    "            # 時間的正規化(平均Mを使用)\n",
+    "            Cn = X[:, :, m:(n + 1)]\n",
+    "            Cn = cp.multiply(M_expanded, Cn)  # 平均Mで正規化\n",
+    "\n",
+    "            # 投影\n",
+    "            S = cp.dot(Q, Cn)\n",
+    "            S = S[0, :, :, :]\n",
+    "            S = cp.swapaxes(S, 0, 1)\n",
+    "            \n",
+    "            # チューニング\n",
+    "            S1 = S[:, 0, :]\n",
+    "            S2 = S[:, 1, :]\n",
+    "            alpha = cp.std(S1, axis=1) / (eps + cp.std(S2, axis=1))\n",
+    "            \n",
+    "            alpha_expanded = cp.expand_dims(alpha, axis=1)\n",
+    "            alpha_S2 = alpha_expanded * S2\n",
+    "            \n",
+    "            Hn = cp.add(S1, alpha_S2)\n",
+    "            Hnm = Hn - cp.expand_dims(cp.mean(Hn, axis=1), axis=1)\n",
+    "            \n",
+    "            # オーバーラップ加算\n",
+    "            H[:, m:(n + 1)] = cp.add(H[:, m:(n + 1)], Hnm)\n",
+    "\n",
+    "        # NumPy配列に戻す\n",
+    "        bvp_cupy = H\n",
+    "        bvp_numpy = cp.asnumpy(bvp_cupy)\n",
+    "\n",
+    "        raw_bvp_signal = [bvp_numpy]\n",
+    "        bvp_signal = [bvp_numpy.copy()]\n",
+    "\n",
+    "        # 後処理フィルタリング\n",
+    "        bvp_signal = vhr.BVP.apply_filter(\n",
+    "            bvp_signal,\n",
+    "            vhr.BVP.BPfilter,\n",
+    "            params={'order': 6, 'minHz': 0.5, 'maxHz': 2.0, 'fps': fps}\n",
+    "        )\n",
+    "\n",
+    "        bvp_signal = vhr.BVP.apply_filter(bvp_signal, vhr.BVP.zeromean)\n",
+    "\n",
+    "        raw_bvp_signal_in_window = raw_bvp_signal[0] if len(bvp_signal) > 0 else None\n",
+    "        filtered_bvp_signal_in_window = bvp_signal[0] if len(bvp_signal) > 0 else None\n",
+    "\n",
+    "        # FFT解析\n",
+    "        raw_bvp_signal_in_window = raw_bvp_signal_in_window.flatten() if raw_bvp_signal_in_window is not None else None\n",
+    "        filtered_bvp_signal_in_window = filtered_bvp_signal_in_window.flatten()\n",
+    "        fft_result_dic = analyze_window_fft(filtered_bvp_signal_in_window, fps)\n",
+    "\n",
+    "        # MAEの計算\n",
+    "        rppg_bpm = fft_result_dic['max_freq'] * 60\n",
+    "        rppg_freq = fft_result_dic['frequencies']\n",
+    "        rppg_amplitude = fft_result_dic['amplitudes']\n",
+    "        rppg_pwd = fft_result_dic['power_spectrum']\n",
+    "\n",
+    "        bpm_MAE_averaged = np.abs(ecg_bpm_in_window_mean - rppg_bpm) if not np.isnan(ecg_bpm_in_window_mean) else np.nan\n",
+    "\n",
+    "        proj_name = \"averaged_M_POS\"\n",
+    "        \n",
+    "        print(f\"\\n結果サマリー [{proj_name}]:\")\n",
+    "        print(f\"  ECG BPM: {ecg_bpm_in_window_mean:.2f}\")\n",
+    "        print(f\"  rPPG BPM: {rppg_bpm:.2f}\")\n",
+    "        print(f\"  元のMAE: {bpm_MAE:.2f}\")\n",
+    "        print(f\"  平均M使用時のMAE: {bpm_MAE_averaged:.2f}\")\n",
+    "        print(f\"  MAE差分: {bpm_MAE_averaged - bpm_MAE:.2f}\")\n",
+    "        print(f\"  M_listの長さ: {len(M_list)}\")\n",
+    "        \n",
+    "        # M_listを文字列に変換(CSV保存用)\n",
+    "        M_list_str = [' '.join(map(str, M.flatten())) for M in M_list]\n",
+    "        M_list_combined = '; '.join(M_list_str)\n",
+    "        \n",
+    "        # 結果を辞書形式でリストに追加\n",
+    "        result_dict = {\n",
+    "            'window_index': window_index,\n",
+    "            'projection': proj_name,\n",
+    "            'window_size': window_size,\n",
+    "            'stride': stride,\n",
+    "            'frame_start': frame_start,\n",
+    "            'frame_end': frame_end,\n",
+    "            'window_start_time': window_start_time,\n",
+    "            'window_end_time': window_end_time,\n",
+    "            'ecg_bpm': ecg_bpm_in_window_mean,\n",
+    "            'rppg_bpm': rppg_bpm,\n",
+    "            'original_bpm_MAE': bpm_MAE,  # 元のMAE\n",
+    "            'averaged_M_bpm_MAE': bpm_MAE_averaged,  # 平均M使用時のMAE\n",
+    "            'mae_difference': bpm_MAE_averaged - bpm_MAE,  # MAE差分\n",
+    "            'M_list': M_list_combined,\n",
+    "            'average_M': ' '.join(map(str, cp.asnumpy(average_M).flatten())),  # 平均Mの値\n",
+    "            'num_sliding_windows': len(M_list),\n",
+    "        }\n",
+    "        results_list.append(result_dict)\n",
+    "    \n",
+    "    # 全ウィンドウの処理が終わった後、DataFrameに変換\n",
+    "    results_df = pd.DataFrame(results_list)\n",
+    "    \n",
+    "    # 結果をCSVに保存\n",
+    "    output_path = os.path.join(rootDir, SAVE_DIR, f'POS_M_average_output_{dataName}.csv')\n",
+    "    results_df.to_csv(output_path, index=False)\n",
+    "    print(f\"\\n結果を保存しました: {output_path}\")\n",
+    "    \n",
+    "    cap.release()"
    ]
   }
  ],
