一旦ランドマーク選択まで

--- a/5-LandmarksAccuracyEvalu.ipynb
+++ b/5-LandmarksAccuracyEvalu.ipynb
@@ -1621,7 +1621,104 @@
    "id": "cd93eunt2rn",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(len(movie_paths)):\n",
+    "    inputMoviePath = movie_paths[i]\n",
+    "    rootDir = data_dirs[i]\n",
+    "    dataName = movie_names[i]\n",
+    "\n",
+    "    print(f'Processing movie: {inputMoviePath}')\n",
+    "\n",
+    "    # 動画のfpsを取得\n",
+    "    cap = cv2.VideoCapture(inputMoviePath)\n",
+    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "    samplingRate = fps\n",
+    "    cap.release()\n",
+    "\n",
+    "    save_dir = os.path.join(rootDir, SAVE_DIR)\n",
+    "    os.makedirs(save_dir, exist_ok=True)        \n",
+    "\n",
+    "    # CSVファイルの読み込み\n",
+    "    ecg_csv_path = os.path.join(rootDir, dataName + '.csv')\n",
+    "    ecg_df = pd.read_csv(ecg_csv_path)\n",
+    "\n",
+    "    ecg_RRI_csv_path = os.path.join(rootDir, f'RRI_Simple_{movie_names[i]}.csv')\n",
+    "    ecg_RRI_df = pd.read_csv(ecg_RRI_csv_path)\n",
+    "\n",
+    "    # landmarkで共通のecg_bpm_in_window_meanを取得\n",
+    "    ecg_bpm_in_window = ecg_RRI_df['BPM']\n",
+    "    ecg_bpm_in_window_mean = ecg_RRI_df['BPM'].values.mean()\n",
+    "\n",
+    "    # ROIデータの読み込み\n",
+    "    os.makedirs(save_dir, exist_ok=True)\n",
+    "    window_analysis_data_path = os.path.join(rootDir, SAVE_DIR, f'{dataName}_window_analysis_{PATCH_SIZE}x{PATCH_SIZE}.csv')\n",
+    "    window_analysis_dataframe = pd.read_csv(window_analysis_data_path)\n",
+    "\n",
+    "    # maskを読み込み\n",
+    "    landmarks_window_mask_path = os.path.join(rootDir, SAVE_DIR, f'{dataName}_landmarks_window_mask.csv')\n",
+    "    landmarks_window_mask_df = pd.read_csv(landmarks_window_mask_path)\n",
+    "\n",
+    "    stride_segment_calculator = StrideSegmentCalculator(window_sizes=WINDOW_SIZES, strides=STRIDES)\n",
+    "    analysis_df = stride_segment_calculator.create_analysis_dataframe(total_frames, fps)\n",
+    "\n",
+    "    # ランドマークごとに実行\n",
+    "    # 結果を格納するリスト\n",
+    "    all_window_results = []\n",
+    "    for idx, row in analysis_df.iterrows():\n",
+    "        window_size = row['window_size']\n",
+    "        frame_start = row['frame_start']\n",
+    "        frame_end = row['frame_end']\n",
+    "        stride = row['stride']\n",
+    "\n",
+    "        # 窓の時間範囲を計算\n",
+    "        window_start_time = frame_start / fps\n",
+    "        window_end_time = frame_end / fps\n",
+    "\n",
+    "        # landmarks_window_mask_dfから該当する窓のマスクを取得\n",
+    "        window_mask_df = landmarks_window_mask_df[\n",
+    "            (landmarks_window_mask_df['window_index'] == idx)\n",
+    "        ]\n",
+    "\n",
+    "        # angle_valid_ratioが一番高いランドマークを選択\n",
+    "        if len(window_mask_df) == 0:\n",
+    "            continue\n",
+    "        best_landmark_row = window_mask_df.loc[window_mask_df['angle_valid_ratio'].idxmax()]\n",
+    "        landmark_id = best_landmark_row['landmark_id']\n",
+    "        angle_valid_ratio = best_landmark_row['angle_valid_ratio']\n",
+    "\n",
+    "        print(f\"\\nウィンドウ {idx}: 窓サイズ {window_size}s, ストライド {stride}s, フレーム {frame_start}-{frame_end}, ランドマーク {landmark_id}, 角度有効率 {angle_valid_ratio:.2f}\")\n",
+    "\n",
+    "        # window_analysis_dataframeから該当する窓とランドマークのデータを取得\n",
+    "        landmark_window_data = window_analysis_dataframe[\n",
+    "            (window_analysis_dataframe['window_index'] == idx) &\n",
+    "            (window_analysis_dataframe['landmark_id'] == landmark_id)\n",
+    "        ]\n",
+    "\n",
+    "        # 窓情報を保存\n",
+    "        window_info = {\n",
+    "            'landmark_id': landmark_id,\n",
+    "            'window_index': idx,\n",
+    "            'window_size': window_size,\n",
+    "            'stride': stride,\n",
+    "            'frame_start': frame_start,\n",
+    "            'frame_end': frame_end,\n",
+    "            'window_start_time': window_start_time,\n",
+    "            'window_end_time': window_end_time,\n",
+    "            'ecg_bpm_in_window': ecg_bpm_in_window,\n",
+    "            'ecg_bpm_mean': ecg_bpm_in_window_mean,\n",
+    "            'rppg_bpm': landmark_window_data['rppg_bpm'].values[0],\n",
+    "            'bpm_MAE': landmark_window_data['bpm_MAE'].values[0]\n",
+    "        }\n",
+    "        all_window_results.append(window_info)\n",
+    "    # 全結果をDataFrameに変換して保存\n",
+    "    results_df = pd.DataFrame(all_window_results)\n",
+    "    results_save_dir = os.path.join(rootDir, SAVE_DIR)\n",
+    "    os.makedirs(results_save_dir, exist_ok=True)\n",
+    "    results_csv_path = os.path.join(results_save_dir, f'{dataName}_choice_landmarks_{PATCH_SIZE}x{PATCH_SIZE}.csv')\n",
+    "    results_df.to_csv(results_csv_path, index=False, encoding='utf-8-sig')\n",
+    "    print(f\"\\nFFT結果をCSVに保存: {results_csv_path}\")"
+   ]
   }
  ],
  "metadata": {
